# tracuu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  css_build_check.sh  db.sqlite3  docker-compose.yaml  install.sh  manage.py  nginx.conf  package-lock.json  package.json  postcss.config.js  pyproject.toml  readme.md  requirements.txt  run.sh  stop.sh  supervisord.conf  tailwind.config.js
.github/workflows/: build-development.yaml  build.yaml  deploy.yml  ruff.yaml
app/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: backup_db.py
app/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_image_and_more.py  0002_receipt_is_deleted_alter_receipt_image.py  0003_alter_product_image.py  0004_rename_product_to_receipt.py
assets/css/: main.css
docs/: CNAME  index.html  install.sh
mypham/: asgi.py  settings.py  urls.py  wsgi.py
project/: asgi.py  const.py  settings.py  urls.py  wsgi.py
project/storages/: r2_storage.py  storage.py
src/: admin.py  apps.py  auth_backends.py  celery.py  const.py  context_processors.py  forms.py  funcs.py  models.py  serializers.py  settings.py  signals.py  tasks.py  urls.py  views.py
src/management/commands/: backup_db.py  restore_db.py
src/middlewares/: error_logging.py
src/migrations/: 0001_initial.py
src/storages/: storage.py
src/templates/: base.html  dashboard.html  index.html  login.html
src/templates/admin/: base_site.html
src/templates/components/: alert.html  image_modal.html
src/templates/components/base/: close_button.html  header.html  logout_button.html
src/templates/components/dashboard/: receipt_form_modal.html  receipts_table.html  stats.html
src/templates/components/form/: base_button.html  base_input.html  file_input.html  icon_button.html  input.html  text_button.html  textarea.html
src/templates/components/icons/: add.html  delete.html  edit.html  image.html  image_plus.html  logout.html  search.html
src/utils/log/: formatter.py  handler.py
templates/: index.html
templates/products/: search.html
