[tool.ruff]
target-version = "py39"
line-length = 79
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["ALL"]
allowed-confusables = []
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "BLE001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D401",
    "DJ008",
    "ERA001",
    "G004",
    "PTH",
    "RUF012",
    "TRY400",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pylint]
max-args = 10

[project]
name = "tracuu"
version = "1.0"
dependencies = [
    "Django==5.0.6",
    "django-storages==1.14.6",
    "gunicorn==23.0.0",
    "boto3==1.40.3",
    "pillow==10.3.0",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "ruff",
    "black",
]
